--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -5,3 +5,12 @@
     background-repeat: no-repeat;
 
 }
+
+.results{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 250px);
+    grid-auto-rows: 300px;
+    grid-gap: 1rem;
+    justify-content: center;
+
+}
