--- a/client/src/Components/PokemonCard/PokemonCard.css
+++ b/client/src/Components/PokemonCard/PokemonCard.css
@@ -1,18 +1,19 @@
 .card {
-    height: 400px;
+    height: auto;
     position: relative;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
     align-items: flex-end;
     text-decoration: none;
-    border: 4px solid #b0215e;
-    margin-bottom: 20px;
+    border: 2px solid #b0215e;
+    /* margin-bottom: 20px; */
     /* background-image: url('https://images.unsplash.com/photo-1516051662687-567d7c4e8f6a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80'); */
     /* background-size: cover; */    
   }
-  
+/*   
   .inner {
+    border: 1px solid #b0215e;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -22,20 +23,19 @@
     box-sizing: border-box;
     padding: 40px;    
     
-  }
+  } */
   
   .title {
     font-size: 24px;
-    color: black;  
+    color: #f7f2f2;  
     text-align: center;
-    font-weight: 700;
-    color: #181818;
+    /* font-weight: 700; */
+    /* color: #181818; */
     text-shadow: 0px 2px 2px #a6f8d5;
     position: relative;
-    margin: 0 0 20px 0;    
-  }
-  
-  .subtitle {
-    color: #b0215e;
-    text-align: center;
+    /* margin: 0 0 20px 0;     */
+  }  
+
+  .img {
+    width: 10vw;
   }
