--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family:PokemonHollow ;
+  src: url('./font/PokemonHollow.ttf');
+  font-family: PokemonSolid;
+  src: url('./font/PokemonSolid.ttf');
+  font-family: PokemonClassic;
+  src: url('./font/PokemonClassic.ttf');  
+}
+
+:root{
+  --pokemon-font-hollw: PokemonHollow;
+  --pokemon-font-solid: PokemonSolid;
+  --pokemon-font-classic: PokemonClassic;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
