--- a/client/src/Components/Landing/Landing.css
+++ b/client/src/Components/Landing/Landing.css
@@ -4,6 +4,18 @@
 }
 
 
-body {
-    font-family: pokemonHollow;
+.button{
+    width: 25rem;
+    display: flex;
+    position: relative;
+    left: 1200px;
+    top: 250px;
+}
+
+.landing{
+    background-image: url('./fondo-landing.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 800;
+    height: 700px;
 }
