--- a/client/src/Components/Paginado/Paginado.css
+++ b/client/src/Components/Paginado/Paginado.css
@@ -11,4 +11,14 @@
 .pag{
     display: flex;
     text-decoration: none;
+    padding: 5px;
+    margin-left: 5px;
+    background-color: #515151;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.pag:hover{
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 7px;
 }
