--- a/client/src/Components/Detalle/Detail.css
+++ b/client/src/Components/Detalle/Detail.css
@@ -117,3 +117,18 @@
     justify-content: center;
     width: 100%;
 }
+
+.descImg{
+    width: 50%;
+    background-image: url();
+    background: #727272;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 1px solid #ffde00;
+    padding: 1.5rem;
+    border-radius: 13px;
+}
+.descInfo{
+    display: flex;
+    padding-left: 3rem;
+    justify-content: flex-start;
+} */
