--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,34 @@
   color: #61dafb;
 }
 
+input{
+  border-radius: 5px;
+  height: 1.5em;
+}
+
+select{
+  height: 1.5em;
+}
+
+/* button {
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px;
+  text-decoration: none;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 5px #666666;
+  -moz-box-shadow: 5px 5px 5px #666666;
+  box-shadow: 3px 3px 2px #666666;
+  text-shadow: 1px 1px 0px #666666;
+  border: solid #666666 1px;
+  background-color: #727272;
+}
+button:hover {
+  background-color: #282c34;
+} */
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
