--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -1,28 +1,33 @@
-.nav{
+.nav {
     width: 100%;
     padding: 1rem;
     background-color: #515151;
 
     display: flex;
-    position: relative;
+    position: fixed;
     align-items: center;
     justify-content: space-evenly;
+    z-index: 99;
+
+    -webkit-box-shadow: 0px 10px 13px -5px #727272;
+    -moz-box-shadow: 0px 10px 13px -5px #727272;
+    box-shadow: 0px 10px 13px -5px #727272;
 
 }
 
-img{
+img {
     width: 5rem;
 }
 
-.buttons{
+.buttons {
     display: flex;
-    position: relative;    
+    position: relative;
     align-items: flex-end;
     justify-content: space-between;
     width: 11rem;
 }
 
-.buttons a{
+.buttons a {
     text-decoration: none;
     color: #f0f0f0;
     padding: 0.5rem;
@@ -32,11 +37,11 @@ img{
 }
 
 
-.logo{
-     display: flex;
-     position: relative;
-     right: 15rem;
-     align-items: center;
+.logo {
+    display: flex;
+    position: relative;
+    right: 15rem;
+    align-items: center;
 
-     
+
 }
