--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -20,9 +20,10 @@
     right: 0;
     left: 0;
     z-index: -1;
-    opacity: .6;
-    background: url('../../assets/img/cardBackgroud.webp');
+    opacity: .8;
+    background: url('../../assets/img/cardBackgroud.webp');   
     background-size:contain;
+    
 }
 
 .bannerImg{
@@ -30,8 +31,44 @@
     padding-top: 3rem;
 }
 
+.resultContainer{
+    display: flex;
+    flex-direction: column; 
+    position: relative;     
+    
+    /* height: 20rem; */
+    padding-top: 1.5rem;
+    align-items: center;
+    align-content: center;
+    z-index: 5; 
+    padding-top: 3em;
+    /* opacity: .5;      */
+
+}
+
+.resultContainer::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: -1;
+    opacity: .5;
+    background: url('../../assets/img/fondo.jpg');
+    background-size:contain;
+    /* background-repeat: no-repeat; */
+}
+
+/* .resultContainer{
+    background-image: url('../../assets/img/fondo.jpg');
+    background: transparent;
+    padding-top: 2em;
+} */
+
+
 .results{   
-    padding: 3rem;    
+        
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
