--- a/client/src/Components/ErrorCard/ErrorCard.css
+++ b/client/src/Components/ErrorCard/ErrorCard.css
@@ -24,7 +24,7 @@
   }
   
 
-  .img {
+  .errorImg {
   background: #727272;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   /* border: 1px solid #ffde00; */
