--- a/client/src/Components/Filters/Filters.css
+++ b/client/src/Components/Filters/Filters.css
@@ -8,7 +8,7 @@
 
 .orderBy{
     padding: 5px;
-    background-color: #515151
+    background-color: #51515163
 }
 
 .orderBy p{
@@ -26,7 +26,7 @@
     align-items: center;
     padding: 7px;
     padding-top: 10px;
-    background-color: #515151;
+    background-color: #51515163;
 }
 
 .selectBy select{
