--- a/client/src/Components/Nav/Nav.css
+++ b/client/src/Components/Nav/Nav.css
@@ -1,7 +1,8 @@
 .nav {
     width: 100%;
     padding: 1rem;
-    background-color: #515151;
+    background-color: #51515163;
+    
 
     display: flex;
     position: fixed;
