--- a/client/src/Components/PokemonCard/PokemonCard.css
+++ b/client/src/Components/PokemonCard/PokemonCard.css
@@ -1,8 +1,9 @@
-.card {
+.pokemonCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   padding: 20px 10px;
   margin-right: 20px;
@@ -10,11 +11,20 @@
   /* border: 2px solid #b0215e; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  background: #515151;
+  background: #7867ad6b;
   color: #f0f0f0;
-  box-sizing: border-box;
-  width: 8rem;
+  box-sizing: border-box;  
+  width: 30vh;
 
+}
+.pokemonCard:hover{
+  box-shadow: 8px -8px 5px rgba(0, 0, 0, 0.25);
+  /* padding: 10% 0 10% 0;  */
+}
+
+.pokemonCard div img{
+  width: 7rem;
+  height: 7rem;
 }
 
 
@@ -28,7 +38,7 @@
 }
 
 .img {
-  background: #727272;
+  background: #2a990e79;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   /* border: 1px solid #ffde00; */
   padding: 1.5rem;
